--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Retos de Platzi",
   "main": "index.js",
   "scripts": {
-    "dia67": "node ./Dia67/index.js"
+    "dia67": "node ./Dia67/index.js",
+    "dia68": "node ./Dia68/index.js"
   },
   "repository": {
     "type": "git",
