--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dia67": "node ./Dia67/index.js",
     "dia68": "node ./Dia68/index.js",
-    "dia69": "node ./Dia69/index.js"
+    "dia69": "node ./Dia69/index.js",
+    "dia70": "node ./Dia70/index.js"
   },
   "repository": {
     "type": "git",
